--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -49,6 +49,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -144,6 +146,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ClientApp"
 }
