Add UserConnections table and related stored procedures. Add production database. Refactor

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -14,7 +14,7 @@
   },
 
   "ConnectionStrings": {
-    "ZrakChat": "Server=(localdb)\\mssqllocaldb;Database=zrakchat;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=den1.mssql7.gear.host;Initial Catalog=ghostzrakchatdb;User Id=ghostzrakchatdb;Password=Hjgu!if8s-7h;Trusted_Connection=False;MultipleActiveResultSets=true;"
   },
 
   "AllowedHosts": "*"
