--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "ZrakChat": "Server=(localdb)\\mssqllocaldb;Database=zrakchat;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
