Add production parameters and deploy

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -14,7 +14,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=den1.mssql7.gear.host;Initial Catalog=ghostzrakchatdb;User Id=ghostzrakchatdb;Password=Hjgu!if8s-7h;Trusted_Connection=False;MultipleActiveResultSets=true;"
+    "ZrakChat": "Data Source=den1.mssql7.gear.host;Initial Catalog=ghostzrakchatdb;User Id=ghostzrakchatdb;Password=gh7u9n-y8u;Trusted_Connection=False;MultipleActiveResultSets=true;"
   },
 
   "AllowedHosts": "*"
