--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.0",
     "ng-bootstrap-spinner": "^1.2.0",
+    "ngx-timeago": "^1.0.4",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
