--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
-    "@aspnet/signalr": "^1.1.4",
     "@auth0/angular-jwt": "^4.2.0",
+    "@microsoft/signalr": "^3.1.6",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.0",
     "ng-bootstrap-spinner": "^1.2.0",
